[#2] Added Rails view 'index' with js 'header' with translations

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,9 @@
 doctype html
-html ng-app="Rails-AngularJS-template"
+html ng-app="shop"
   head
     meta charset="utf-8"
 
-    title Rails-AngularJS-template
+    title shop
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
 
