--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -91,8 +91,8 @@ header.main-header
           i.fa.fa-shopping-cart
 
       li.search
-        / input(id="search" placeholder="{{ 'HEADER_SEARCH_PRODUCTS_PLACEHOLDER' | translate }}" type="text" ng-model="formData.search_query" style="display:none;")
-        a
+        input(id="search" placeholder="{{ 'HEADER_SEARCH_PRODUCTS_PLACEHOLDER' | translate }}" type="text" ng-model="formData.search_query" ng-show="data.search == 1" class="animate-show")
+        a ng-click="searchShow()"
           i.fa.fa-search
 
       li.account
