[#3] Added 'sessions' controller, 'login page', added 'authorization', 'principal' services - authenticate users, added 'social-buttons-3' CSS

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,11 +2,14 @@
   cursor: pointer;
 }
 
-.background {
-  background-color: white;
-  height: 1000px;
-}
-
 body li {
   list-style-type: none;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.errors {
+  color: red;
 }
