--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -96,7 +96,5 @@ header.main-header
           i.fa.fa-search
 
       li.account
-        a
+        a ng-click="navLogin()"
           ' {{ "HEADER_ACCOUNT" | translate }}
-
-.background
