[#3] Added 'roar-rails' gem, created user head representer and added it to head

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,13 @@ html ng-app="shop"
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
 
+    - if logged_in?
+         javascript:
+           window.currentUser = #{ raw current_user.extend(HeaderUserRepresenter).to_json}
+    - else
+      javascript:
+        window.currentUser = {}
+
   body
     = yield
 
