[#2] Added logout button when logged in, added user first_name on header when logged in

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -146,6 +146,21 @@ input {
   }
 }
 
+.logout {
+  float: right;
+  border-left: 1px #ecebe8 solid;
+  a {
+    display: block;
+    width: 60px;
+    height: 60px;
+    i {
+      font-size: 20px;
+      padding-left: 20px;
+      padding-top: 18px;
+    }
+  }
+}
+
 .account {
   float: right;
   a {
