[#3] Added user list representers, added userData service, Added working 'register' page

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -13,3 +13,10 @@ body li {
 .errors {
   color: red;
 }
+
+.login-button {
+  background-color: #85E6CE;
+  &:hover {
+    background-color: #78CFB9;
+  }
+}
