--- a/app/assets/templates/users/user_new.html.slim
+++ b/app/assets/templates/users/user_new.html.slim
@@ -42,5 +42,5 @@
         h3.text-center.uppercase style="margin-top:0px;"
           ' {{ "USER_NEW_LOGIN_TEXT" | translate }}
 
-        button class="btn login-button" style="width:100%" ng-click="navLogin()"
+        a class="btn login-button" style="width:100%" ui-sref="login"
           ' {{ "USER_NEW_NEW_LOGIN" | translate }}
