--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -20,3 +20,12 @@ body li {
     background-color: #78CFB9;
   }
 }
+
+a.btn {
+  cursor: pointer;
+  color: black;
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
