[#4] deleted navigation functions in ctrl, added 'user edit' template and ctrl, added ng-touched class to errors, added user_representer

--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -103,5 +103,5 @@ header.main-header
         a ui-sref="login" ng-hide="data.user.id"
           ' {{ "HEADER_ACCOUNT" | translate }}
 
-        a.uppercase ng-show="data.user.id"
+        a.uppercase ng-show="data.user.id" ui-sref="user_edit"
           ' {{ data.user.first_name }}
