--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,19 +1,23 @@
 .field {
   input {
     text-align: left;
-    padding-left: 3px;
+    padding-left: 10px;
   }
-  input[type=text], input[type=email], input[type=password]{
+  input[type=text], input[type=email], input[type=password] {
     display: block;
     width: 100%;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
-  .ng-invalid.ng-dirty {
+  input[type=checkbox] {
+    margin-right: 5px;
+  }
+  .ng-invalid.ng-dirty.ng-touched {
     border-color: red;
     border-style: solid;
     border-width: 3px;
   }
-  .ng-valid.ng-dirty {
+  .ng-valid.ng-dirty.ng-touched {
     border-color: green;
     border-style: solid;
     border-width: 3px;
