[#5] fixed authentication, added address edit page with Tabs -> TODO fix setPristine on user edit and address edit forms

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -74,6 +74,10 @@ header a {
     color: black;
     text-decoration: none;
   }
+  &:focus {
+    color: #777;
+    text-decoration: none;
+  }
 }
 
 .language {
