[#5] Added 'delete address', added different alert messages for 'create', 'edit' and 'delete' address

--- a/app/assets/templates/users/user_edit.user_data.html.slim
+++ b/app/assets/templates/users/user_edit.user_data.html.slim
@@ -1,4 +1,4 @@
-alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert}}" style="margin-bottom:0px;"
+alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert.type}}" style="margin-bottom:0px;"
   ' {{ "USER_EDIT_DATA_ALERT_SUCCESS" | translate }}
 
 .account-form style="width:100%;"
