--- a/app/assets/templates/users/user_edit.user_address.html.slim
+++ b/app/assets/templates/users/user_edit.user_address.html.slim
@@ -1,5 +1,10 @@
-alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert}}" style="margin-bottom:0px;"
-  ' {{ "USER_EDIT_ADDRESS_ALERT_SUCCESS" | translate }}
+div ng-repeat="alert in alerts"
+  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;' ng-show='{{alert.message == 1}}'
+    ' {{ "USER_EDIT_ADDRESS_ALERT_SUCCESS_ADD" | translate }}
+  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;' ng-show='{{alert.message == 2}}'
+    ' {{ "USER_EDIT_ADDRESS_ALERT_SUCCESS_EDIT" | translate }}
+  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;' ng-show='{{alert.message == 3}}'
+    ' {{ "USER_EDIT_ADDRESS_ALERT_SUCCESS_DESTROY" | translate }}
 
 .account-form style="width:100%;"
   h3.text-center.uppercase.uppercase style="margin-top:0px;"
@@ -94,3 +99,6 @@ alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert}}" st
 
     button.btn.btn-default(style='width:100%;margin-top:10px;' ng-click="editOrCreateAddress(formData.address.id)")
       ' {{ "USER_EDIT_UPDATE" | translate }}
+
+    button.btn.btn-default(style='width:100%;margin-top:10px;' ng-really-message="{{ 'NG_REALLY_MESSAGE' | translate }}" ng-really-click="destroyAddress(formData.address.id)" ng-show="formData.address.id")
+      ' {{ "USER_EDIT_DELETE_ADDRESS" | translate }}
