[#5] fixed problem with controllers on heroku, added sendGrid to environment.rb, adjusted tests to changes capitalize -> capitalize_words

--- a/app/assets/templates/users/user_edit.user_data.html.slim
+++ b/app/assets/templates/users/user_edit.user_data.html.slim
@@ -7,7 +7,7 @@ alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert.type}
 
   form(style='width:33.33%;margin-left:auto;margin-right:auto' name='editUserForm')
     .field
-      input.form-control.span12(type="text" maxlength="30" name="first_name" placeholder="{{ 'FIRST_NAME_PLACEHOLDER' | translate }}" ng-model="formData.first_name" required ng-pattern="/^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/" ng-minlength='3' ng-maxlength='30')
+      input.form-control.span12(type="text" maxlength="30" name="first_name" placeholder="{{ 'FIRST_NAME_PLACEHOLDER' | translate }}" ng-model="formData.first_name" required ng-pattern="/^[a-zA-ZàáâäãåąčćśęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/" ng-minlength='3' ng-maxlength='30')
 
       .errors ng-show="editUserForm.first_name.$touched && editUserForm.first_name.$dirty"
         .field-error ng-show="editUserForm.first_name.$error.required"
@@ -20,7 +20,7 @@ alert close="closeAlert($index)" ng-repeat="alert in alerts" type="{{alert.type}
           ' {{ "ERROR_FIRST_NAME_LONG" | translate }}
 
     .field
-      input.form-control.span12(type="text" maxlength="30" name="last_name" placeholder="{{ 'LAST_NAME_PLACEHOLDER' | translate }}" ng-model="formData.last_name" required ng-pattern="/^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/" ng-minlength='3' ng-maxlength='30')
+      input.form-control.span12(type="text" maxlength="30" name="last_name" placeholder="{{ 'LAST_NAME_PLACEHOLDER' | translate }}" ng-model="formData.last_name" required ng-pattern="/^[a-zA-ZàáâäãåąčćśęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/" ng-minlength='3' ng-maxlength='30')
 
       .errors ng-show="editUserForm.last_name.$touched && editUserForm.last_name.$dirty"
         .field-error ng-show="editUserForm.last_name.$error.required"
