--- a/app/assets/templates/users/user_edit.user_change_password.html.slim
+++ b/app/assets/templates/users/user_edit.user_change_password.html.slim
@@ -10,14 +10,14 @@ div ng-repeat="alert in alerts"
 
   form(style='width:33.33%;margin-left:auto;margin-right:auto' name='changePasswordForm')
     .field
-      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'OLD_PASSWORD_PLACEHOLDER' | translate }}" ng-model="formData.password.old_password" required name='old_password')
+      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'OLD_PASSWORD_PLACEHOLDER' | translate }}" ng-model="formData.password.old_password" required name='old_password' tooltip="{{ 'OLD_PASSWORD_TOOLTIP' | translate }}" tooltip-trigger="focus" tooltip-placement="left")
 
       .errors ng-show="changePasswordForm.old_password.$touched && changePasswordForm.old_password.$dirty"
         .field-error ng-show="changePasswordForm.old_password.$error.required && changePasswordForm.old_password.$dirty"
           ' {{ "OLD_ERROR_PASSWORD_REQUIRED" | translate }}
 
     .field
-      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password" required id='pw1' name='pw1' ng-minlength='6')
+      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password" required id='pw1' name='pw1' ng-minlength='6'tooltip="{{ 'NEW_PASSWORD_TOOLTIP' | translate }}" tooltip-trigger="focus" tooltip-placement="left")
 
       .errors ng-show="changePasswordForm.pw1.$touched && changePasswordForm.pw1.$dirty"
         .field-error ng-show="changePasswordForm.pw1.$error.required && changePasswordForm.pw1.$dirty"
@@ -26,7 +26,7 @@ div ng-repeat="alert in alerts"
           ' {{ "NEW_ERROR_PASSWORD_SHORT" | translate }}
 
     .field
-      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_CONFIRMATION_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password_confirmation" required id='pw2' name='pw2' pw-check="pw1")
+      input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_CONFIRMATION_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password_confirmation" required id='pw2' name='pw2' pw-check="pw1" tooltip="{{ 'ONEW_PASSWORD_CONFIRMATION_TOOLTIP' | translate }}" tooltip-trigger="focus" tooltip-placement="left")
 
       .errors ng-show="changePasswordForm.pw2.$touched && changePasswordForm.pw2.$dirty"
         .field-error ng-show="changePasswordForm.pw2.$error.pwmatch && changePasswordForm.pw2.$dirty"
